<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.oakkub.jobintern.Activities.TabMainActivity">

    <item
        android:id="@+id/search_settings"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="2"
        android:title="@string/Search"
        app:actionLayout="@layout/search_view"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_settings"
        android:orderInCategory="99"
        android:title="@string/logoutSettings"
        app:showAsAction="never" />

</menu>
