<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/small_radius"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/spacing_size_tiny">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jobCountCardTextView"
            style="@style/TextViewNoStyle"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/tiny_margin"
            android:layout_marginLeft="@dimen/spacing_size_small"
            android:layout_marginRight="@dimen/tiny_margin"
            android:layout_marginStart="@dimen/spacing_size_small" />

        <TextView
            android:id="@+id/advanceNoCardTextView"
            style="@style/TextViewNoStyle"
            android:layout_toEndOf="@+id/jobCountCardTextView"
            android:layout_toRightOf="@+id/jobCountCardTextView" />

        <TextView
            android:id="@+id/jobNoCardTextView"
            style="@style/TextViewNoStyle"
            android:layout_alignLeft="@+id/advanceNoCardTextView"
            android:layout_alignStart="@+id/advanceNoCardTextView"
            android:layout_below="@+id/advanceNoCardTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jobNoCardTextView"
            android:layout_toLeftOf="@+id/advanceTotalCardTextView"
            android:layout_toStartOf="@+id/advanceTotalCardTextView"
            android:freezesText="true"
            android:text="@string/costTextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/advanceTotalCardTextView"
            style="@style/DetailTextViewStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/jobNoCardTextView"
            android:layout_marginEnd="@dimen/spacing_size_small"
            android:layout_marginRight="@dimen/spacing_size_small" />

        <Button
            android:id="@+id/disapproveJobAdvanceCardButton"
            style="@style/CardViewButton"
            android:layout_below="@+id/advanceTotalCardTextView"
            android:layout_toLeftOf="@+id/postponeJobAdvanceCardButton"
            android:layout_toStartOf="@+id/postponeJobAdvanceCardButton"
            android:background="@drawable/selector_card_view_cancel_button_shape"
            android:text="@string/disapprove_button" />

        <Button
            android:id="@+id/postponeJobAdvanceCardButton"
            style="@style/CardViewButton"
            android:layout_below="@+id/advanceTotalCardTextView"
            android:layout_toLeftOf="@+id/approveJobAdvanceCardButton"
            android:layout_toStartOf="@+id/approveJobAdvanceCardButton"
            android:background="@drawable/selector_card_view_postpone_button_shape"
            android:text="@string/postpone_button" />

        <Button
            android:id="@+id/approveJobAdvanceCardButton"
            style="@style/CardViewButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/advanceTotalCardTextView"
            android:background="@drawable/selector_card_view_approve_button_shape"
            android:text="@string/approve_button" />

    </RelativeLayout>

</android.support.v7.widget.CardView>



